--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
     "DISPLAY": "${localEnv:DISPLAY}",
     "PYTHONPATH": "${containerWorkspaceFolder}",
     "TERM": "xterm-256color",
-    "CARLA_HOST": "host.docker.internal",
+    "CARLA_HOST": "host.orb.internal",
     "force_color_prompt": "1"
   },
   "runArgs": [
@@ -21,7 +21,7 @@
     "--volume=/tmp/comma_download_cache:/tmp/comma_download_cache",
     "--volume=/tmp/devcontainer_scons_cache:/tmp/scons_cache",
     "--shm-size=1G",
-    "--add-host=host.docker.internal:host-gateway", // required to use host.docker.internal on linux
+    "--add-host=host.orb.internal:host-gateway", // required to use host.orb.internal on linux
     "--publish=0.0.0.0:8070-8079:8070-8079"  // body ZMQ services
   ],
   "features": {
